# gan

./: .pre-commit-config.yaml  Makefile  gan_nn_mnist.pth  pyproject.toml
gan/: main.py  model.py  predict.py  train.py
gan/architecture/: nn.py
gan/utils/: logger.py
runs/GAN_MNIST/1679816389.8129697/: events.out.tfevents.1679816389.kamalshrestha.139103.0
runs/GAN_MNIST/1679816389.8129697/Loss_d_loss/: events.out.tfevents.1679816391.kamalshrestha.139103.2
runs/GAN_MNIST/1679816389.8129697/Loss_g_loss/: events.out.tfevents.1679816391.kamalshrestha.139103.1
runs/GAN_MNIST/1680092533.9677017/: events.out.tfevents.1680092533.kamalshrestha.256129.0
runs/GAN_MNIST/1680092533.9677017/Loss_d_loss/: events.out.tfevents.1680092535.kamalshrestha.256129.2
runs/GAN_MNIST/1680092533.9677017/Loss_g_loss/: events.out.tfevents.1680092535.kamalshrestha.256129.1
tests/: test_gan.py
